--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "react-activity-counter",
+  "name": "react-essential",
   "version": "1.0.0",
-  "description": "An activity counter using React JS",
+  "description": "A project focusing on React and related tools",
   "main": "index.js",
   "scripts": {
-    "start": "httpster -d ./dist -p 3200"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Github4Aaron/react-activity-counter.git"
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "author": "Aaron Strouse",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Github4Aaron/react-activity-counter/issues"
-  },
-  "homepage": "https://github.com/Github4Aaron/react-activity-counter#readme",
+  "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-preset-latest": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0"
-  }
+    "autoprefixer-loader": "^3.2.0",
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.25.0",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  }  
 }
